force-app/main/default/objects/InvoiceFlag__c/InvoiceFlag__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Invoice Flag</label>
</CustomObject>