force-app/main/default/objects/InvoiceFlag__c/fields/Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Cancelled__c</fullName>
    <label>Cancelled</label>
    <length>255</length>
    <type>Text</type>
</CustomField>