force-app/main/default/objects/InvoiceFlag__c/fields/GreaterAdder__c.field-meta.xml
<CustomField>
    <fullName>GreaterAdder__c</fullName>
    <label>GreaterAdder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>