force-app/main/default/objects/InvoiceFlag__c/fields/GreaterAmount__c.field-meta.xml
<CustomField>
    <fullName>GreaterAmount__c</fullName>
    <label>GreaterAmount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>