force-app/main/default/objects/InvoiceFlag__c/fields/GreaterVolume__c.field-meta.xml
<CustomField>
    <fullName>GreaterVolume__c</fullName>
    <label>Greater Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>