force-app/main/default/objects/InvoiceFlag__c/fields/LessAdder__c.field-meta.xml
<CustomField>
    <fullName>LessAdder__c</fullName>
    <label>Less Adder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>