force-app/main/default/objects/InvoiceFlag__c/fields/LessAmount__c.field-meta.xml
<CustomField>
    <fullName>LessAmount__c</fullName>
    <label>Less Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>