force-app/main/default/objects/InvoiceFlag__c/fields/LessVolume__c.field-meta.xml
<CustomField>
    <fullName>LessVolume__c</fullName>
    <label>Less Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>