force-app/main/default/objects/InvoiceFlag__c/fields/NotApproved__c.field-meta.xml
<CustomField>
    <fullName>NotApproved__c</fullName>
    <label>Not Approved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>