force-app/main/default/objects/InvoiceFlag__c/fields/PaymentNotReceived__c.field-meta.xml
<CustomField>
    <fullName>PaymentNotReceived__c</fullName>
    <label>Payment Not Received</label>
    <length>255</length>
    <type>Text</type>
</CustomField>