force-app/main/default/objects/InvoiceFlag__c/fields/PaymentReceived__c.field-meta.xml
<CustomField>
    <fullName>PaymentReceived__c</fullName>
    <label>Payment Received</label>
    <length>255</length>
    <type>Text</type>
</CustomField>